NetBSD Problem Report #43643

From dholland@eecs.harvard.edu  Mon Jul 19 23:37:45 2010
Return-Path: <dholland@eecs.harvard.edu>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1B35E63BB0A
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 19 Jul 2010 23:37:45 +0000 (UTC)
Message-Id: <20100719233414.4A843F8D4@tanaqui.eecs.harvard.edu>
Date: Mon, 19 Jul 2010 19:34:14 -0400 (EDT)
From: dholland@eecs.harvard.edu
Reply-To: dholland@eecs.harvard.edu
To: gnats-bugs@gnats.NetBSD.org
Subject: dash prefix broken with make -j
X-Send-Pr-Version: 3.95

>Number:         43643
>Category:       bin
>Synopsis:       dash prefix broken with make -j
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jul 19 23:40:01 +0000 2010
>Closed-Date:    Mon Nov 22 04:33:38 +0000 2010
>Last-Modified:  Mon Nov 22 04:33:38 +0000 2010
>Originator:     David A. Holland
>Release:        NetBSD 5.99.30 (20100610), also 20100719, and also in -4
>Organization:
>Environment:
System: NetBSD macaran 5.99.30 NetBSD 5.99.30 (MACARAN) #2: Thu Jun 10 23:29:26 EDT 2010  root@macaran.eecs.harvard.edu:/usr/src/sys/arch/amd64/compile/MACARAN amd64
Architecture: x86_64
Machine: amd64
>Description:

Make recipe lines can be prefixed with '-' to prevent stopping on
error. This stops working when -j is enabled.

>How-To-Repeat:

Use this makefile:

   ------
foo:
        -false
   ------

and do

% make
% make -j1

>Fix:

Dunno, will look into it if I get a chance.

Note that the .IGNORE attribute, which is supposed to be the same as
the dash prefix, still works in -j mode, so it's not as much the same
as it's advertised to be. It also seems to have a minor cosmetic bug:

   % make
   false
   *** Error code 1 (ignored)
   % make -j1
   false
   *** [foo] Error code 1(ignored)
   % 
                        ^^

which rather suggests it's using a different code path. (sigh)

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43643 CVS commit: src/usr.bin/make
Date: Tue, 20 Jul 2010 12:39:28 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Tue Jul 20 16:39:28 UTC 2010

 Modified Files:
 	src/usr.bin/make: job.c

 Log Message:
 PR/43643: David A. Holland: dash prefix broken with make -j
 As the comment says in JobPrintJob set JOB_IGNERR with - commands. Fix
 whitespace so that the output is consistent, although there are two separate
 execution logic implementations (command.c, job.c)


 To generate a diff of this commit:
 cvs rdiff -u -r1.151 -r1.152 src/usr.bin/make/job.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Fri, 30 Jul 2010 06:34:00 +0000
State-Changed-Why:
pullup-4 #1401, pullup-5 #1433
(thanks to Christos for fixing it)


From: Manuel Bouyer <bouyer@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43643 CVS commit: [netbsd-4] src/usr.bin/make
Date: Wed, 4 Aug 2010 11:04:59 +0000

 Module Name:	src
 Committed By:	bouyer
 Date:		Wed Aug  4 11:04:59 UTC 2010

 Modified Files:
 	src/usr.bin/make [netbsd-4]: job.c

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #1401):
 	usr.bin/make/job.c: revision 1.152 via patch
 PR/43643: David A. Holland: dash prefix broken with make -j
 As the comment says in JobPrintJob set JOB_IGNERR with - commands. Fix
 whitespace so that the output is consistent, although there are two separate
 execution logic implementations (command.c, job.c)


 To generate a diff of this commit:
 cvs rdiff -u -r1.124 -r1.124.2.1 src/usr.bin/make/job.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43643 CVS commit: [netbsd-5] src/usr.bin/make
Date: Sun, 21 Nov 2010 18:45:00 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Sun Nov 21 18:45:00 UTC 2010

 Modified Files:
 	src/usr.bin/make [netbsd-5]: job.c

 Log Message:
 Pull up following revision(s) (requested by dholland in ticket #1433):
 	usr.bin/make/job.c: revision 1.152
 PR/43643: David A. Holland: dash prefix broken with make -j
 As the comment says in JobPrintJob set JOB_IGNERR with - commands. Fix
 whitespace so that the output is consistent, although there are two separate
 execution logic implementations (command.c, job.c)


 To generate a diff of this commit:
 cvs rdiff -u -r1.141 -r1.141.2.1 src/usr.bin/make/job.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Mon, 22 Nov 2010 04:33:38 +0000
State-Changed-Why:
pullups completed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.