PR/43643: David A. Holland: dash prefix broken with make -j As the comment says in JobPrintJob set JOB_IGNERR with - commands. Fix whitespace so that the output is consistent, although there are two separate execution logic implementations (command.c, job.c)